syntax = "proto3";

package clans;

service Clan {
    rpc RecommendedClans (RecommenedClansRequest) returns (ShortClanInfoList);
    rpc SearchClans (SearchClansRequest) returns (ShortClanInfoList);
}

message RecommenedClansRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message SearchClansRequest {
    int32 offset = 1;
    int32 limit = 2;
    string pattern = 3;
}

message ShortClanInfo {
    int32 id = 1;
    string name = 2;
    int32 members = 3;
    int32 maxMembers = 4;
    int32 averageTrophies = 5;
}

message ShortClanInfoList {
    int32 offset = 1;
    repeated ShortClanInfo infos = 2;
}

